{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 64,
  "lineage": "340d5b2e-4d05-551e-a958-ab5080b56198",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-08-30T13:53:32.222-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-mon-test-iac/global/firewalls/gke-vpc-allow-internal",
            "log_config": [],
            "name": "gke-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
            "priority": 1000,
            "project": "prj-mon-test-iac",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/firewalls/gke-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.10.0.0/16",
              "10.20.0.0/14",
              "10.50.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap_to_bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-30T13:53:32.352-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-mon-test-iac/global/firewalls/gke-vpc-iap-to-bastion-ssh",
            "log_config": [],
            "name": "gke-vpc-iap-to-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
            "priority": 1000,
            "project": "prj-mon-test-iac",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/firewalls/gke-vpc-iap-to-bastion-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "10250",
                  "10257",
                  "10259",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-30T13:53:31.956-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-mon-test-iac/global/firewalls/gke-vpc-master-to-nodes",
            "log_config": [],
            "name": "gke-vpc-master-to-nodes",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
            "priority": 1000,
            "project": "prj-mon-test-iac",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/firewalls/gke-vpc-master-to-nodes",
            "source_ranges": [
              "172.16.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250812",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/zones/me-central2-a/disks/gke-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-mon-test-iac/zones/me-central2-a/instances/gke-bastion",
            "instance_id": "571054083022969348",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "T2k8SANv_uI=",
            "metadata_startup_script": "apt-get update -y\r\napt-get install -y curl apt-transport-https ca-certificates gnupg\r\ncurl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg\r\necho \"deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main\" \u003e /etc/apt/sources.list.d/google-cloud-sdk.list\r\napt-get update -y\r\napt-get install -y google-cloud-cli kubectl\r\n",
            "name": "gke-bastion",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/regions/me-central2/subnetworks/mgmt-subnet",
                "subnetwork_project": "prj-mon-test-iac"
              }
            ],
            "project": "prj-mon-test-iac",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/zones/me-central2-a/instances/gke-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "me-central2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.debian",
            "google_compute_network.vpc",
            "google_compute_subnetwork.mgmt",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prj-mon-test-iac/global/networks/gke-vpc",
            "mtu": 0,
            "name": "gke-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "725138585977543258",
            "project": "prj-mon-test-iac",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc"
          },
          "dependencies": [
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-30T13:53:33.181-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/prj-mon-test-iac/regions/me-central2/routers/gke-vpc-router",
            "name": "gke-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
            "project": "prj-mon-test-iac",
            "region": "me-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/regions/me-central2/routers/gke-vpc-router"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "prj-mon-test-iac/me-central2/gke-vpc-router/gke-vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "gke-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "prj-mon-test-iac",
            "region": "me-central2",
            "router": "gke-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/regions/me-central2/subnetworks/gke-private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/regions/me-central2/subnetworks/mgmt-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.gke",
            "google_compute_subnetwork.mgmt",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-30T13:53:38.173-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/prj-mon-test-iac/regions/me-central2/subnetworks/gke-private-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "gke-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-mon-test-iac",
            "purpose": "PRIVATE",
            "region": "me-central2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/14",
                "range_name": "gke-private-subnet-pods"
              },
              {
                "ip_cidr_range": "10.50.0.0/20",
                "range_name": "gke-private-subnet-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/regions/me-central2/subnetworks/gke-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.enable_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-30T13:53:37.690-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/prj-mon-test-iac/regions/me-central2/subnetworks/mgmt-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "mgmt-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/global/networks/gke-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-mon-test-iac",
            "purpose": "PRIVATE",
            "region": "me-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-mon-test-iac/regions/me-central2/subnetworks/mgmt-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.enable_apis"
          ]
        }
      ]
    }
  ]
}